@@ -1,3 +1,4 @@
+    FIXED: [ 248691 ] incorrect layout / wrong buttons in queue manager
     FIXED: [ 315357 ] krarc silently fails to display contents of some zip files
            zip files containing paths with "." as a path component are still not handled,
            but now krarc reports an error instead silently failing
